--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,20 @@ body
   display:flex;
   justify-content:center;
   align-items:center;
+  flex-direction: column;  
   height: 100vh;
+}
+
+#gameboard
+{
+  width: 300px; height:300px;
+  background-color: black;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.square
+{
+  width: 100px; height: 100px;
+  background-color:white;
 }
