--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,24 @@ body
   background-color: black;
   display: flex;
   flex-wrap: wrap;
+  border: solid 2px black;
 }
 
 .square
 {
   width: 100px; height: 100px;
   background-color:white;
+  border: solid 2px black;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+circle
+{
+  width: 90px; width: 90px;
+  border-radius: 50%;
+  border: 15px solid blue;
+  box-sizing: border-box;
 }
