--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@ body
   align-items: center;
 }
 
-circle
+.circle
 {
-  width: 90px; width: 90px;
+  width: 90px; height: 90px;
   border-radius: 50%;
   border: 15px solid blue;
   box-sizing: border-box;
