--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,30 @@ body
   border: 15px solid blue;
   box-sizing: border-box;
 }
+
+.cross
+{
+  width: 90px; height: 90px;
+  position: relative;
+  transform: rotate(45deg);
+}
+
+.cross:before, .cross.cross:after
+{
+  content: ""; position:absolute;
+  background-color:red;
+}
+
+.cross:before
+{
+  left: 50%; width: 30%;
+  margin-left: -15%;
+  height: 100%;
+}
+
+.cross:after
+{
+  top: 50%; height: 30%;
+  margin-top: -15%;
+  width: 100%;
+}
